test/classes/nilability/type-to-non-or-nilable.good
type-to-non-or-nilable.chpl:11: warning: owned C -> nil  owned C?
type-to-non-or-nilable.chpl:12: warning: owned C -> non  owned C
type-to-non-or-nilable.chpl:13: warning: owned C? -> nil  owned C?
type-to-non-or-nilable.chpl:14: warning: owned C? -> non  owned C
type-to-non-or-nilable.chpl:18: warning: shared C -> nil  shared C?
type-to-non-or-nilable.chpl:19: warning: shared C -> non  shared C
type-to-non-or-nilable.chpl:20: warning: shared C? -> nil  shared C?
type-to-non-or-nilable.chpl:21: warning: shared C? -> non  shared C
type-to-non-or-nilable.chpl:25: warning: borrowed C -> nil  borrowed C?
type-to-non-or-nilable.chpl:26: warning: borrowed C -> non  borrowed C
type-to-non-or-nilable.chpl:27: warning: borrowed C? -> nil  borrowed C?
type-to-non-or-nilable.chpl:28: warning: borrowed C? -> non  borrowed C
type-to-non-or-nilable.chpl:32: warning: unmanaged C -> nil  unmanaged C?
type-to-non-or-nilable.chpl:33: warning: unmanaged C -> non  unmanaged C
type-to-non-or-nilable.chpl:34: warning: unmanaged C? -> nil  unmanaged C?
type-to-non-or-nilable.chpl:35: warning: unmanaged C? -> non  unmanaged C
type-to-non-or-nilable.chpl:44: warning: owned D -> nil  owned D?
type-to-non-or-nilable.chpl:45: warning: owned D -> non  owned D
type-to-non-or-nilable.chpl:46: warning: owned D? -> nil  owned D?
type-to-non-or-nilable.chpl:47: warning: owned D? -> non  owned D
type-to-non-or-nilable.chpl:51: warning: shared D -> nil  shared D?
type-to-non-or-nilable.chpl:52: warning: shared D -> non  shared D
type-to-non-or-nilable.chpl:53: warning: shared D? -> nil  shared D?
type-to-non-or-nilable.chpl:54: warning: shared D? -> non  shared D
type-to-non-or-nilable.chpl:58: warning: borrowed D -> nil  borrowed D?
type-to-non-or-nilable.chpl:59: warning: borrowed D -> non  borrowed D
type-to-non-or-nilable.chpl:60: warning: borrowed D? -> nil  borrowed D?
type-to-non-or-nilable.chpl:61: warning: borrowed D? -> non  borrowed D
type-to-non-or-nilable.chpl:65: warning: unmanaged D -> nil  unmanaged D?
type-to-non-or-nilable.chpl:66: warning: unmanaged D -> non  unmanaged D
type-to-non-or-nilable.chpl:67: warning: unmanaged D? -> nil  unmanaged D?
type-to-non-or-nilable.chpl:68: warning: unmanaged D? -> non  unmanaged D
type-to-non-or-nilable.chpl:70: error: done
